# OMEROAgent

./: NOTICE  README.md  manifest.json  pyproject.toml
scripts/: build_brxt.sh
skills/omero-imaging-data/: SKILL.md
src/omeroagent/: __init__.py  __main__.py  cli.py  server.py
