[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omeroagent"
version = "0.1.0"
description = "MCP access pattern for OMERO image repositories, project/dataset/image metadata, and web/API endpoint inspection for microscopy data review."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Baranzini Lab", email = "wanjun.gu@ucsf.edu"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

[project.scripts]
omeroagent = "omeroagent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omeroagent"]

[tool.uv]
constraint-dependencies = [
    "cryptography<49; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
